minor status updates

--- a/css/pres.css
+++ b/css/pres.css
@@ -2,6 +2,12 @@
 	border: 0;
 	box-shadow: 0 0 0 rgba(0,0,0,0);
 	background: transparent;
+	display: block;
+	margin: 0 auto;
+}
+
+.reveal .logo-block {
+	margin-top: 50px;
 }
 
 .selected {
